assets/styles.css
:root {
  --black: rgb(0, 0, 0);
  --lblack: rgb(31, 30, 30);
  --red: rgb(229, 43, 43);
  --lred: rgb(221, 73, 73);
  --lgrey: rgb(223, 223, 223);
  --grey-30: #49454E;
  --white: #fff;
  --hover: 0 4px 12px rgb(0 0 0 / 15%);
  --lshadow: 0 4px 8px 0 rgba(0 0 0 / 20%);
  --shadow: 0 5px 8px 0 rgba(0 0 0 / 20%), 0 5px 5px 0 rgba(0 0 0 /19%);
  --clr-modal: #009688;
  --clr-modal-help: #2196f3;
}

*, ::after, ::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {

  font-family:  'Lato', Helvetica, sans-serif;
}
h1,h2,h3,h4,h5, p {
  display: block;
}

ul, li {
  list-style: none;
}
a {
  text-decoration: none;
}
b {
  font-weight: bolder;
}
p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

label{
  display: block;
}

button {
  border: none;
  cursor: pointer;
  font-family: "Lato", sans-serif;
  transition: .2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  text-decoration: none;
}
/* ================ RESUABLE ================*/
.grid-fill{
  padding: 32px 0;
  display: grid;
  grid-gap: 32px;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
}
.txt-white {
  color: var(--white) !important;
}
textarea,
.input input{
  padding: 10px;
  border: 1px solid var(--lgrey);
  border-radius: 4px;
  font-size: 15px;
  margin-bottom: 12px;
}

.txt-center {
  text-align: center !important;
}

.w100 {
  width: 100%;
}
.w50 {
  width: 50%;
}

.mr-8 {
  margin-right: 8px;
}
.mr-16 {
  margin-right: 16px;
}
.mr-24 {
  margin-right: 24px;
}
.pt-16 {
  padding-top: 16px;
}

.section {
  padding: 64px 16px;
}
/* ================ LAYTOUT ================*/

.main {
  position: relative;
}

#header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: var(--black);
  box-shadow: var(--shadow);
  z-index: 1;
}
#header > ul {
  display: flex;
}

/* ================ SECTION NAV ================*/
#nav {
  display: inline-block;
}
#nav > li {
  display: inline-block;
}
#nav li {
    position: relative;
  }
  #nav > li:hover > a,
  .subnav li:hover{
    color: var(--black);
    background-color: var(--lgrey);
    transition: all 0.3s;
  }
  #nav li > a {
    padding: 0 24px;
    line-height: 46px;
    display: block;
  }
  #nav > li > a {
    color: var(--white);
    text-transform: uppercase;
  }

    /* subnav */
    .subnav {
      position: absolute;
      background: var(--white);
      left: 0;
      top: 100%;
      min-width: 160px;
      overflow: hidden;

      display: none;
    }
    #nav .subnav a {
      border: none;
      color: var(--black);
      padding: 0 16px;
      line-height: 38px;
    }
    #nav li:hover .subnav{
      display: block;
      box-shadow: var(--shadow);
    }
    /* search icon */
    .header-search {
      float: right;
      font-size: 18px;
    }
    .icon-header__search {
      padding: 0 24px;
      line-height: 46px;
    }
    .icon-header__search:hover {
      color: var(--white);
      cursor: pointer;
      background-color: var(--lred);
      transition: all 0.3s;
    }

/* ================ SECTION SLIDES ================*/

#slider {
  margin-top: 46px;
  overflow: hidden;
}
.slide {
  padding-top: 46%;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.slide1 {
  background-image: url(./img/img-1.avif);
}
/* .slide2 {
  background-image: url(./img/img-2.avif);
}
.slide3 {
  background-image: url(./img/img-3.avif);
} */

/* SOLUTION SLIDER WITH CSS */
/* @-webkit-keyframes slidy {
  0% {left: 0%}
  25% {left: 0%}
  45% {left: -100%}
  50% {left: -100%}
  70% {left: -200%}
  75% {left: -200%}
  95% {left: -300%}
  100% {left: -400%}
}
#sliders {overflow: hidden;}
#sliders figure img {width: 20%; float: left; max-height:768px;}
#sliders figure {
  position: relative;
  display: none;
  width: 500%;
  margin: 0;
  left: 0;
  text-align-last: left;
  font-size: 0;
  animation: 15s slidy infinite;
} */

.slide-title {
  font-size: 1.6rem;
  margin: 10px 0;
}
.slide-desc {
  font-size: 1rem;
  padding-bottom: 32px;
  margin: 0;
}

/* ================ SECTION CONTENT ================*/
.content {
  margin-left: auto;
  margin-right: auto;
  max-width: 800px;
}

.content-title{
  opacity: .8;
  text-transform: uppercase;
  margin: 24px 0px;
  letter-spacing: .1em;
  font-size: 1.875rem;
  font-weight: 400;
}
.content-subtitle {
  font-style: italic;
  opacity: .6;
  font-weight: 300;
}
.content-desc {
  text-align: justify;
  line-height: 1.5;
}
/* ================ SECTION BAND ================*/
  .member-item {
    padding: 16px;
  }
  .member-name {
    font-weight: 300;
    margin: 0;
    padding: 12px;
  }
  .member-pic {
    border-radius: 10px;
    object-fit: cover;
    height: 100%;
    border: none;
    box-shadow: var(--lshadow);
  }
  /* HOVER */
  .member-item:hover{
    transition: all .3s;
    transform: translateY(.25rem);
  }

/* ================ SECTION TOUR ================*/
.section-tour{
  background-color: var(--black);
}

.list-tickets{
  background-color: var(--white);
  margin-top: 32px;
  border: 1px solid var(--lgrey);
}
.list-tickets li {
  border-bottom: 1px solid var(--lgrey);
  color: grey;
  font-size: 15px;
  margin: 2px 0px;
}
.list-tickets li:last-child {
  border-bottom: none;
}
.ticket{
  padding: 8px 16px;
  font-size: 15px
}
.sold-out{
  background: var(--lred);
  padding: 2px 6px;
  margin-left: 16px;

}
.quantity{
  float: right;
  width: 24px;
  height: 24px;
  background: var(--black);
  border-radius: 50%;
  line-height: 24px;
  margin-top: -3px;
}
/* Placeshow */
  .place-item{
    background: var(--white);
  }
    .place-img {
      height: 240px;
      object-fit: cover;
      transition: opacity .2s ease;
    }
      .place-img:hover {
        opacity: .8;
      }
    .place-desc{
      padding: 0 16px;
    }
    .location b, .date, .describe {
      margin: 14px 0px;
      }
      .location{
        font-size: 15px;
        text-rendering: optimizeLegibility;
        -webkit-font-smoothing: antialiased;
      }
      .date{
        color: grey;
        font-size: 15px;
      }
      .describe{
        font-size: 14px;
      }
      /* button BUY TICKETS */
      .button {
        background: var(--lblack);
        padding: 12px 16px !important;
        border-radius: 2px;
        box-shadow: var(--lshadow);
        text-transform: uppercase;
        font-size: 15px;
        transition: opacity .2s ease-in-out;
      }
      .btn-buy {
        margin: 14px 0;
      }
        .btn-buy:hover,
        .btn-buy:focus{
          opacity: .9;
          transform: translateY(-2px);
        }

/* ================ MODAL FOR TICKETS ================*/
.modal {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  justify-content: center;
  align-items: center;
  background: rgba(0 0 0 / 40%);
  z-index: 999;
  padding: 0 16px;
  display: none;
}
.modal.open {
  display: flex;
}

.modal-container {
  background: var(--white);
  border-radius: 10px;
  width: 900px;
  min-height: 300px;
  position: relative;
  -webkit-animation: fadeInDown 500ms ease-in-out;
  animation: fadeInDown 500ms ease-in-out;
}

.btn-modal-close{
  position: absolute;
  right: 0;
  top: 0;
  padding: 16px 28px;
  font-size: 24px;
  background: none;
}
.btn-modal-close:hover {
  opacity: .8;
}

.modal-header{
  background: var(--clr-modal);
  display: flex;
  justify-content: center;
  align-items: center;
  height: 128px;
  font-size: 32px;
  letter-spacing: 4px;
  border-radius: 10px 10px 0 0;
}
.modal-desc{
  padding: 16px 28px;
}

.modal-label__icon {
  color: var(--grey-30);
}

.modal-desc label {
  margin-bottom: 8px;
}

.modal-button-pay{
  background: var(--clr-modal);
}
.modal-button-pay:hover {
  opacity: .9;
}
.modal-footer {
  margin: 16px 0;
}
.modal-help {
  float: right;
}
.modal-help a {
  color: var(--clr-modal-help);
}

@-webkit-keyframes fadeInDown {
  0% {
    opacity: 0;
    -webkit-transform: translateY(-40px);
  }
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

/* ================ SECTION CONTACT ================*/
.contact-container {
  display: flex;
  justify-content: center;
  padding-top: 36px;
}

.icons {
  color: var(--clr-modal);
}

#contact-message {
  font-family: "Lato", sans-serif;
  resize: none;
}
.button-submit {
  background: var(--clr-modal);
}

.contact-label {
  padding: 8px;
}

.button-submit:hover {
  opacity: .8;
}
/* ================ SECTION FOOTER ================*/
footer {
  background: #f1f1f1;
  padding: 64px;
  opacity: .6;
}
.footer-socials {
  margin: 16px 0;
}
.footer-social {
  font-size: 24px;
}
.footer-social i {
  color: grey;
  -webkit-font-smoothing: antialiased;
}
.footer-social:hover {
  opacity: .9;
}

.copyright {
  font-size: 12px;
}


/* ================ RESPONSIVE FOR DEVICES ================*/
/* For desktop: */
.col-1 {width: 8.33333333%;}
.col-2 {width: 16.66666667%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33333333%;}
.col-5 {width: 41.66666667%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33333333%;}
.col-8 {width: 66.66666667%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33333333%;}
.col-11 {width: 91.66666667%;}
.col-12 {width: 100%;}


/* For mobile phones. */
@media only screen and (max-width: 48em) {
  #header > ul {
    display: block;
  }
  #nav > li {
    display: block;
  }
  [class*="col-"] {
    width: 100%;
  }
  .w50 {
    width: 100%;
  }
  .icons {
    display: block;
    padding-bottom: 8px;
    font-size: 24px;
  }
  .contact-container {
    display: block;
    text-align: center;
  }
  .contact-labels {
    margin-bottom: 24px;
  }
  .contact-label {
    padding-bottom: 16px;
  }
  .mr-16 {
    margin-right: 0;
  }
  .mb-32 {
    margin-bottom: 32px;
  }
  .btn-buy {
    width: 100%;
  }
}

